# idor-hunter

./: .gitignore  LICENSE  README.md  WRITEUP-corridor.md  WRITEUP-portswigger-method-bypass.md  WRITEUP-portswigger-user-id.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic.yaml  multi-user.yaml
examples/sample-report/: findings.json  report.html
idor_hunter/: __init__.py  analyzer.py  cli.py  config.py  harvester.py  reporter.py  scanner.py
idor_hunter/templates/: report.html.j2
tests/: test_analyzer.py  test_backcompat.py  test_cli.py  test_config.py  test_config_placeholders.py  test_scanner.py
